// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YarnMonoWorkspace creates a generic YarnMonoWorkspace 1`] = `
{
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "devDependencies": {
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
  },
  "files": [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "workspace",
  "private": true,
  "repository": {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": {
    "a": "b",
  },
  "scripts": undefined,
  "types": undefined,
  "version": "0.0.1",
  "workspaces": [],
}
`;

exports[`YarnMonoWorkspace with a project 1`] = `
{
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "files": [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-yarn-project",
  "private": true,
  "repository": {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": undefined,
  "scripts": undefined,
  "types": undefined,
  "version": "0.0.0",
}
`;

exports[`YarnMonoWorkspace with a project supporting yalc 1`] = `
{
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "files": [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-yarn-project",
  "private": true,
  "repository": {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": undefined,
  "scripts": {
    "yalc": "npx yalc publish",
  },
  "types": undefined,
  "version": "0.0.0",
}
`;
